--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Thinkful Quiz App</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script type="text/javascript" src="app.js"></script>
-	<link rel="stylesheet" href="main.css">
-</head>
-<body>
-	<form>
-  		<h2>QUIZ</h2>
-  				<div class="questAn">
-  			  </div>
- 	 <button>Start Quiz</button>
- 	 <p class="dispQuestion"></p>
- 	 <p class="dispScore"></p>
-	</form>
+<div class="row">
+  <div class="col-sm-2">
+  </div>
+  <div class="col-sm-8 wrap">
 
-</body>
-</html>
+    <h2>QUIZ <i class="icon-lightbulb"></i></h2>
+    <div class="theQuiz">
+      <div class="quizOverlay">
+        <form>
+          <button>Start Quiz</button>
+
+          <div class="questAn">
+          </div>
+            <p class="dispQuestion"></p>
+            <p class="dispScore"></p>
+        </form>
+        </div>
+        <div class="col-sm-2">
+        </div>
+      </div>
+    </div>
+  </div>
